<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="skip_button">Skip question</string>
    <string name="testing">testing button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_question">Skip question</string>
    <string name="pause">Pause</string>
    <string name="close">Close</string>
    <string name="other">Other</string>
    <string name="paused">Paused</string>
    <string name="resume">Resume</string>
    <string name="review_instructions">Review Instructions</string>
    <string name="skip_this_survey">Skip this activity</string>
    <string name="continue_later">Continue later</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="exit">Exit</string>
    <string name="on_a_scale">"On a scale of %1$d to %2$d"</string>
    <string name="maximum_characters">"(Maximum %1$d characters)"</string>
    <string name="tap_to_respond">Tap to respond</string>
    <string name="click_to_pick_time">Click to pick time</string>
    <string name="please_select_a_time">Please select a time within the requested range</string>
    <string name="well_done">Well done!</string>
    <string name="thank_you_for">Thank you for being part of our study.</string>

</resources>